--- a/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
+++ b/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Consul": {
+    "url": "http://localhost:8500",
+    "serviceName": "PartsPipelineer.Services.Tools",
+    "port": "5005",
+    "healthCheckUrl": "health",
+    "interval": 5,
+    "removeAfterInterval": 10,
+    "deregisterAterTime": 3
+  }
 }
