PartsPipelineer.Services.Tools Conusl Register

--- a/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
+++ b/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
@@ -10,10 +10,10 @@
   "Consul": {
     "url": "http://localhost:8500",
     "serviceName": "PartsPipelineer.Services.Tools",
-    "port": "5005",
-    "healthCheckUrl": "health",
+    "serviceAddress": "localhost",
+    "servicePort": 5010,
+    "healthCheckUrl": "http://localhost:5010/health",
     "interval": 5,
-    "removeAfterInterval": 10,
-    "deregisterAterTime": 3
+    "removeAfterInterval": 10
   }
 }
