worked consul for a 2 services and api gw

--- a/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway/appsettings.json
+++ b/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Consul": {
+    "url": "http://localhost:8500",
+    "serviceName": "PartsPipelineer.Api.Gateway",
+    "serviceHost": "10.0.2.15",
+    "servicePort": 5020,
+    "healthCheckUrl": "http://10.0.2.15:5000/health",
+    "interval": 5,
+    "removeAfterInterval": 10,
+    "tlsSkipVerify": true
+  }
 }
