--- a/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
+++ b/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/appsettings.json
@@ -10,10 +10,11 @@
   "Consul": {
     "url": "http://localhost:8500",
     "serviceName": "PartsPipelineer.Services.Tools",
-    "serviceAddress": "localhost",
+    "serviceHost": "10.0.2.15",
     "servicePort": 5010,
-    "healthCheckUrl": "http://localhost:5010/health",
+    "healthCheckUrl": "http://10.0.2.15:5010/health",
     "interval": 5,
-    "removeAfterInterval": 10
+    "removeAfterInterval": 10,
+    "tlsSkipVerify": true
   }
 }
