--- a/PartsPipelineer.Services.Devices/PartsPipelineer.Services.Devices/Properties/launchSettings.json
+++ b/PartsPipelineer.Services.Devices/PartsPipelineer.Services.Devices/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5021;http://localhost:5020",
+      "applicationUrl": "https://*:5021;http://*:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
