--- a/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/Properties/launchSettings.json
+++ b/PartsPipelineer.Services.Tools/PartsPipelineer.Services.Tools/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5011;http://localhost:5010",
+      "applicationUrl": "http://*:5010;https://*:5011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
