--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     container_name: consul
     ports:
       - 8500:8500
+      - 8600:8600/udp
     # networks:
     #   - pplineer
     volumes:
       - /consul:/consul/data
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
