--- a/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway.csproj
+++ b/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway/PartsPipelineer.Api.Gateway.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MMLib.SwaggerForOcelot" Version="4.4.1" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="17.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Ocelot" Version="17.0.0" />
     <PackageReference Include="Consul" Version="1.6.1.1" />
